[tool.poetry]
name = "daily_fantasy_sports_models"
version = "0.1.0"
description = "Models related to Daily Fantasy Sports"
authors = ["Jae Bradley <jae.b.bradley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
coverage = "^5.3"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.3"
pymdown-extensions = "^7.1"
pytest = "^6.1.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
